2007-07-03  Mike Kestner  <mkestner@novell.com>

	* bootstrap-generic : use automake --foreign to make automake-1.10
	happy with gnu make function usage.

2007-06-25  Mike Kestner  <mkestner@novell.com>

	* gtk/StatusIcon.custom : present_icon is in the glue lib.

2007-06-25  Ankit Jain  <jankit@novell.com>

	* gdk/Gdk.metadata : hide Property.Get for manual impl.
	* gdk/Property.custom : manually marshal the data param in Get.

2007-06-19  Mike Kestner  <mkestner@novell.com>

	* gdk/Property.custom : obsolete compat overload for Change().
	* gdk/Gdk.metadata : array attr for Property.Change ().
	* gdk/Makefile.am : add custom file.

2007-06-18  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : bump version and tag.

2007-06-05  Mike Kestner  <mkestner@novell.com>

	* glib/ManagedValue.cs (ReleaseWrapper): new method.
	* glib/Value.cs : release the ManagedValue wrapper to avoid leaks.
	[Fixes #81799]

2007-05-03  Wade Berrier  <wberrier@novell.com>

	* generator/gapi2-codegen.in:
	* parser/gapi2-fixup.in:
	* parser/gapi2-parser.in:
	Don't use 'which' anymore, as it doesn't work in all caes (ie: when symlinks are
	in the way)

2007-04-28  Mike Kestner  <mkestner@novell.com>

	* generator/NativeCallbackSignature.cs :
	* generator/Signal.cs : don't use ref IntPtr in native callback sigs
	for struct parameters.  Use IntPtr and StructureToPtr.  Fixes the 
	layout issues in MD introduced by the structure marshaling rework.

2007-04-24  Aaron Bockover  <abockover@novell.com>

	* gtk/Widget.custom (StyleGetProperty): return null if 
	gtksharp_widget_style_get_property returns FALSE (property 
	doesn't exist) [Fixes #81445]

	* gtk/glue/widget.c (gtksharp_widget_style_get_property): check 
	return of gtk_widget_class_find_style_property for NULL; function now
	returns TRUE if spec is not NULL, FALSE otherwise

2007-04-23  Brad Taylor  <brad@getcoded.net>
	
	* gtk/TreePath.custom: Override Equals and compare based upon the