@@ -1,5 +1,13 @@
 2007-07-03  Mike Kestner  <mkestner@novell.com>
 
+	* generator/ImportSignature.cs : use Parameter.NativeSignature 
+	prop and refactor out some GError handling.
+	* generator/MethodBody.cs : Refactor logic into Parameters.
+	* generator/Parameters.cs : add ArrayParameter, ArrayCountPair, and
+	ErrorParameter subclasses to refactor spaghetti code in MethodBody.
+
+2007-07-03  Mike Kestner  <mkestner@novell.com>
+
 	* bootstrap-generic : use automake --foreign to make automake-1.10
 	happy with gnu make function usage.
 
